# food-compass

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  project.yml  project_status.md  pyproject.toml  run.py
.github/workflows/: cd.yml  ci.yml  kamis_daily_fetch.yml  price_gokr_daily_fetch.yml
Chroma-db/: chroma-db-check.py  chroma-db-settings.md  chroma-db-test.py  chroma-test.sqlite3  deploy-template.yaml  deploy.yaml  generate_yaml.sh  load-test.py  requirements.txt
app/: README.md  graph.py
app/agents/: router.py
app/api/: README.md  main.py  routes.py
app/core/: README.md  config.py  db.py  llm.py  state.py  tracing.py
app/graph/: README.md  __init__.py  config.py  graph.py  nodes.py  router.py  state.py
app/prompts/: README.md  prompts.py  router_prompt.py
app/schemas/: JudgePriceOutput.py  README.md  RouterOutput.py  __init__.py  schemas.py
app/tools/: README.md  item_alias.py  judge.py  kamis.py  kamis_client.py  normalize.py  price_cache.py  price_gokr_client.py  price_gokr_snapshot.py  price_snapshot.py  region.py  user_input.py  vector_store.py
chroma_db/: chroma.sqlite3
daily_check_md/: day2_checklist.md  day3_checklist.md  day4_checklist.md  day5_checklist.md
data/: README.md  build_substitute_collection.py  insertion-chroma-db.py  insertion-db.py  insertion_knowledge_rag.py  inspect_chroma.py
data/rag_docs/: seasonal_knowledge.json
data/sql/: init.sql
frontend/: README.md  app.py
scripts/: README.md  check_price_cache.py  fetch_kamis_snapshot.py  fetch_price_gokr_snapshot.py  verify_price_answer.py
tests/: APItest.ipynb  README.md  test_code_rabbit.py  test_graph.py  test_judge_price.py  test_normalize.py  test_router.py  test_supabase_connection.py
tests/fixtures/: kamis_mock.json
