[project]
name = "food-compass"
version = "0.1.0"
description = "장바구니 물가 판단 에이전트 - LangGraph 기반 가격 판단 AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "streamlit>=1.40.0",
    "chromadb>=0.5.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-upstage>=0.3.0",
    "langgraph>=1.2.9",
    "sse-starlette>=2.1.0",   # Day3: SSE 스트리밍 응답 (FastAPI StreamingResponse만으론 SSE 포맷 처리가 번거로움)
    "tenacity>=9.0.0",         # Day3/Day5: KAMIS·참가격 API 실패 시 재시도(Retry) 로직
    "litellm>=1.50.0",         # 기술스택 명시된 LLMOps 모델 게이트웨이
    "psycopg2-binary>=2.9.12",
    "sentence-transformers>=3.0.0",
    "torch",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=8.0.0",           # Day2: 핵심 흐름 단위 테스트
    "pytest-asyncio>=0.24.0",  # LangGraph/FastAPI 비동기 노드 테스트용
    "ruff>=0.15.21",
]
stretch = [
    "langchain>=1.3.13",
    "langfuse>=2.50.0",        # Day5: LLMOps 선택 가점 항목 (Trace)
]

[tool.uv.sources]
# GCE VM(e2-medium, GPU 없음)에서 sentence-transformers -> torch가 기본으로 CUDA 전체
# 스택(cudnn/nccl/cufft 등, 수 GB)을 받아와 디스크 부족으로 docker compose up이 멈추는
# 문제가 있었음 — CPU 전용 wheel만 받도록 인덱스를 고정.
# uv는 sources 오버라이드를 "직접 의존성"에만 적용하므로 torch를 dependencies에도 명시해야 함
# (sentence-transformers를 통한 transitive 의존성만으로는 이 오버라이드가 무시됨).
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["tests/APItest.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["tests/", "frontend/"]
